major fix wuth power analysis api
